Implement class count

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.16)
 project(struct-catalogue)
 
 add_executable(${PROJECT_NAME}
+	attribute.cpp
 	attribute-set.cpp
 	inference-rule.cpp
 	inference-rule-manager.cpp
